correct spacing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -32,12 +32,6 @@ h1, h2 {
     color: var(--primary-color)
 }
 
-p1 {
-    font-family: var(--body-font);
-    color: #fff;
-    
-}
-
 nav, p, section, article {
     margin: 16px;
     padding: 8px;
@@ -50,6 +44,8 @@ nav, p, section, article {
 .hero {
     position: relative;
 }
+
+
 .hero img {
     display: block;
     width: 100%;
@@ -67,9 +63,11 @@ h1 {
     color: #fff
 }
 
-article {
+.hero article {
     position: absolute;
-    bottom: 0;
+    bottom: 0; 
+    background-color: var(--secondary-color);
+    color: #fff;
 }
 
 .hero article img {
